Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10948

Impala shouldn't require DECIMAL scale for Parquet files

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.1.0
    • Backend
    • ghx-label-11

    Description

      Impala requires the 'scale' to be set for decimal columns: https://github.com/apache/impala/blob/1a61a8025c87c37921a1bba4c49f754d8bd10bcc/be/src/exec/parquet/parquet-metadata-utils.cc#L332

      But it is only an optional field in Parquet's SchemaElement and the docs says that if the scale is unspecified then it should be considered to be 0.

      Then there's the new logical type annotation DecimalType, but Impala doesn't use it during scans.

      Attachments

        Activity

          People

            gfurnstahl Gergely Fürnstáhl
            boroknagyz Zoltán Borók-Nagy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: